--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_PASSWORD="WTL8GEGKbybACAlV"
 NEXT_PUBLIC_MONGODB_URL=mongodb+srv://junhyung8795:WTL8GEGKbybACAlV@cluster0.xliaytc.mongodb.net/?retryWrites=true&w=majority
+GMKEY="GM29"
