--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@next/font": "13.0.7",
+    "axios": "^1.2.2",
+    "bootstrap": "^5.2.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "mongodb": "^4.12.1",
     "mongoose": "^6.8.0",
     "next": "13.0.7",
+    "next-session": "^4.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
