--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "bootstrap": "^5.2.3",
         "eslint": "8.30.0",
         "eslint-config-next": "13.0.7",
+        "iron-session": "^6.3.1",
         "mongodb": "^4.12.1",
         "mongoose": "^6.8.0",
         "next": "13.0.7",
