--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@next-auth/mongodb-adapter": "^1.1.1",
         "@next/font": "13.0.7",
         "bootstrap": "^5.2.3",
         "eslint": "8.30.0",
         "eslint-config-next": "13.0.7",
-        "mongodb": "^4.12.1",
+        "mongodb": "^4.13.0",
         "mongoose": "^6.8.0",
         "next": "13.0.7",
-        "next-session": "^4.0.5",
+        "next-auth": "^4.18.8",
         "react": "18.2.0",
         "react-dom": "18.2.0"
     }
