--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@fullcalendar/core": "^6.0.3",
+        "@fullcalendar/daygrid": "^6.0.3",
+        "@fullcalendar/interaction": "^6.0.3",
+        "@fullcalendar/react": "^6.0.4",
+        "@fullcalendar/timegrid": "^6.0.3",
         "@next-auth/mongodb-adapter": "^1.1.1",
         "@next/font": "13.0.7",
         "bootstrap": "^5.2.3",
