--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
         "@fullcalendar/core": "^6.0.3",
         "@fullcalendar/daygrid": "^6.0.3",
         "@fullcalendar/interaction": "^6.0.3",
         "@fullcalendar/react": "^6.0.4",
         "@fullcalendar/timegrid": "^6.0.3",
+        "@mui/joy": "^5.0.0-alpha.65",
+        "@mui/material": "^5.11.7",
+        "@mui/x-date-pickers": "^5.0.17",
         "@next-auth/mongodb-adapter": "^1.1.1",
         "@next/font": "13.0.7",
         "bootstrap": "^5.2.3",
+        "dayjs": "^1.11.7",
         "eslint": "8.30.0",
         "eslint-config-next": "13.0.7",
         "mongodb": "^4.13.0",
