--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@mui/material": "^5.11.7",
         "@mui/x-date-pickers": "^5.0.17",
         "@next/font": "13.0.7",
+        "antd": "^5.2.3",
         "bootstrap": "^5.2.3",
         "dayjs": "^1.11.7",
         "eslint": "8.30.0",
