--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "mongoose": "^6.8.0",
         "next": "13.0.7",
         "next-auth": "^4.18.8",
+        "pino": "^8.11.0",
         "react": "18.2.0",
         "react-dom": "18.2.0"
     }
