--- a/package.json
+++ b/package.json
@@ -32,5 +32,10 @@
         "pino": "^8.11.0",
         "react": "18.2.0",
         "react-dom": "18.2.0"
+    },
+    "devDependencies": {
+        "@types/jest": "^29.5.14",
+        "jest": "^29.7.0",
+        "ts-jest": "^29.2.6"
     }
 }
